# packaging-scout

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/packaging_scout/: __init__.py  fake.py
