[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packaging_scout"
version = "0.0.1"
authors = [
  { name="Jordan Bucholtz", email="author@example.com" },
]
description = "Scouting options for python packaging"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'aiohttp',
  'pydantic',
]

[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-asyncio',
  'black',
  'isort',
  'pylint',
  'pre-commit',
  'mypy',
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pylint.main]
extension-pkg-whitelist = ["pydantic"]

