[project]
name = "packaging_scout"
dynamic = [
    "version",
]
authors = [
  { name="Jordan Bucholtz", email="author@example.com" },
]
description = "Scouting options for python packaging"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'aiohttp',
  'pydantic',
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-asyncio',
  'black',
  'isort',
  'pylint',
  'pre-commit',
  'mypy',
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/packaging_scout/_version.py"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pylint.main]
extension-pkg-whitelist = ["pydantic"]

